Avoid usage of Immutable* in API contracts